--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="nav-left">
           <img src="img/Himasi.png" alt="" width="50px">
-          <h2>HIMPUNAN MAHASISWA SISTEM INFORMASI</h2>
+          <h2>TESTING</h2>
       </div>
       <div class="nav-right">
         <a href="https://instagram.com/himasi_uinril?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="img/ig.png"  width="40px"></a>
