--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
     <title>HIMASI | UINRIL</title>
   </head>
   <body>
   <main>
-    <div class="section-1">
+    <div class="section-1" id="home">
     <header>
       <div class="nav-left">
           <img src="img/Himasi.png" alt="" width="50px">
-          <h2>TESTING</h2>
+          <h2>HIMPUNAN MAHASISWA SISTEM INFORMASI</h2>
       </div>
       <div class="nav-right">
         <a href="https://instagram.com/himasi_uinril?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="img/ig.png"  width="40px"></a>
@@ -229,40 +229,123 @@
     </div>
 
     <div class="section-5">
-      <div class="vector-5" style="position: absolute; bottom: -10px; left: 0;">
-        <img src="img/footer.png" alt="" width="100%">
-      </div>
 
       <div class="pengurus">
         <div class="pengurus-title" style="text-align: center; color: #60a4f9;">
           <img src="img/pengurus.png" alt="">
-          <h4 style="text-align: center;">30 <br>Pengurus</h4>
+          <h4 style="text-align: center;">16 <br>Pengurus</h4>
         </div>
         <div class="pengurus-title" style="text-align: center; color: #60a4f9;">
           <img src="img/pengurus.png" alt="">
-          <h4 style="text-align: center;">80 <br>Anggota</h4>
+          <h4 style="text-align: center;">49 <br>Anggota</h4>
         </div>
         <div class="pengurus-title" style="text-align: center; color: #60a4f9;">
           <img src="img/pengurus.png" alt="">
-          <h4 style="text-align: center;">200++ <br>Mahasiswa</h4>
+          <h4 style="text-align: center;">300++ <br>Mahasiswa</h4>
         </div>
+      </div>
       </div>
 
-      <div class="footer">
-        <div class="footer-tittle" style="width: 200px; text-align: center; color: white;">
-          <img src="img/peta.png" alt=""  style="margin-bottom: 20px;" class="ppp">
-          <h6>Gedung Sisfo Fakultas Sainstek</h6>
-        </div>
-        <div class="footer-tittle" style="width: 200px; text-align: center; color: white;">
-          <img src="img/Himasi.png" alt=""  style="margin-bottom: 20px;" class="himacontact">
-          <h6>Copyright © 2023.Himasi.Uinril</h6>
-        </div>
-        <div class="footer-tittle" style="width: 200px; text-align: center; color: white;">
-          <img src="img/phone.png" alt=""  style="margin-bottom: 20px;" class="ppp">
-          <h6>+62 852 7484 8508</h6>
-        </div>
-      </div>
+<footer class="text-center text-lg-start bg-dark text-muted mt-5">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Mari terhubung dengan kami di media sosial:</span>
     </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="https://instagram.com/himasi_uinril?igshid=OGQ5ZDc2ODk2ZA==" class="me-4 text-reset" target="_blank">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://www.tiktok.com/@himasi_uinril?_t=8fzKLpiyeRO&_r=1" class="me-4 text-reset" target="_blank">
+        <i class="bi bi-tiktok"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <img src="img/Himasi.png" alt="" width="30px">  HIMASI UINRIL
+          </h6>
+          <p>
+            Selamat datang di website HIMASI UINRIL. Temukan visi, misi, dan kegiatan kami dengan navigasi yang mudah. Mari bergabung dengan kami dengan mendaftar online dan ikuti berita terkini melalui media sosial kami. Terima kasih telah berkunjung ke website kami.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Navigation
+          </h6>
+          <p>
+            <a href="index.html#home" class="text-reset">Beranda</a>
+          </p>
+          <p>
+            <a href="departemen.html" class="text-reset">Departemen</a>
+          </p>
+          <p>
+            <a href="kegiatan.html" class="text-reset">Kegiatan</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="bi bi-geo-alt-fill"></i>  Gedung B Saintek UINRIL</p>
+          <p>
+            <i class="bi bi-envelope"></i>
+             himasi.uinril@gmail.com
+          </p>
+          <p><i class="bi bi-telephone"></i>  +62 852 7484 8508 (Gilang)</p>
+          <p><i class="bi bi-instagram"></i>  @himasi_uinril</p>
+          <p><i class="bi bi-tiktok"></i>  @himasi_uinril</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- register -->
+  <div class="container p-4 pb-0">
+    <!-- Section: CTA -->
+    <section class="">
+      <p class="d-flex justify-content-center align-items-center">
+        <span class="me-3">Ayo bergabung dengan kami!</span>
+        <button id="regis" data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
+          Daftar
+        </button>
+      </p>
+    </section>
+    <!-- Section: CTA -->
+  </div>
+  <!-- register -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2023 Copyright:
+    <a class="text-reset fw-bold" href="himasisfo-uinril.netlify.app">HIMASI UINRIL</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
     </main>
 
