--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/global.css">
     <title>HIMASI | UINRIL</title>
   </head>
   <body>
@@ -324,16 +325,37 @@
   <!-- Section: Links  -->
 
   <!-- register -->
-  <div class="container p-4 pb-0">
+  <div class="container">
     <!-- Section: CTA -->
-    <section class="">
-      <p class="d-flex justify-content-center align-items-center">
-        <span class="me-3">Ayo bergabung dengan kami!</span>
-        <button id="regis" data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
+      <div class="d-flex align-items-center justify-content-center">
+        <div class="d-flex align-items-center mx-2 pt-3">
+          <p>Ayo bergabung dengan kami!</p>
+        </div>
+        <div>
+          <a href="#myModal" class="btn btn-outline-light btn-rounded trigger-btn" data-toggle="modal">Daftar</a>
+        </div>
+        <!-- <button id="regis" data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
           Daftar
-        </button>
-      </p>
-    </section>
+        </button> -->
+      </div>
+      <div id="myModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="icon-box">
+                <i class="bi bi-x-lg"></i>
+              </div>				
+            </div>
+            <h4 class="modal-title w-100">Mohon Maaf!</h4>	
+            <div class="modal-body">
+              <p class="text-center">Tidak ada jadwal pendaftaran untuk saat ini,  hubungi nomor yang tertera untuk informasi lebih lanjut</p>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-danger btn-block" data-dismiss="modal">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- Section: CTA -->
   </div>
   <!-- register -->
@@ -361,6 +383,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     
   </body>
 </html>
