--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2023 Copyright:
-    <a class="text-reset fw-bold" href="himasisfo-uinril.netlify.app">HIMASI UINRIL</a>
+    <a class="text-reset fw-bold" href="https://himasisfo-uinril.netlify.app">HIMASI UINRIL</a>
   </div>
   <!-- Copyright -->
 </footer>
